--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.13.1",
-    "@cloudinary/url-gen": "^1.21.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.0.5",
-    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
-    "react-particles": "^2.12.2",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
