--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.0.5",
+    "fuse.js": "^7.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
