--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "react-top-loading-bar": "^3.0.2",
     "react-use-gesture": "^9.1.3",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.6.0"
