--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.1.5",
     "@reduxjs/toolkit": "^2.5.1",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.0.5",
