--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fancyapps/ui": "^6.1.5",
     "@reduxjs/toolkit": "^2.5.1",
     "@use-gesture/react": "^10.3.1",
+    "caniuse-lite": "^1.0.30001756",
     "framer-motion": "^12.0.5",
     "fuse.js": "^7.0.0",
     "react-icons": "^5.4.0",
